k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: default
  labels:
    app: calculator
spec:
  type: ClusterIP
  selector:
    app: calculator
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
