k8s/resources.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: calculator-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: calculator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: default
      ports:
        - protocol: TCP
          port: 3000
    - from:
        - podSelector:
            matchLabels:
              app: calculator
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
